Reinstate text