@@ -489,6 +489,27 @@ def createCheckTypeTask(checker, shortName) {
     ]
     options.fork = true
 
+    options.forkOptions.jvmArgs += [
+      "--add-exports",
+      "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+      "--add-exports",
+      "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+      "--add-exports",
+      "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+      "--add-exports",
+      "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+      "--add-exports",
+      "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+      "--add-exports",
+      "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+      "--add-exports",
+      "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+      "--add-exports",
+      "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+      "--add-opens",
+      "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+    ]
+
     if (JavaVersion.current().compareTo(org.gradle.api.JavaVersion.VERSION_20) < 0) {
       sourceCompatibility = 1.8
       targetCompatibility = 1.8
